--- a/index.css
+++ b/index.css
@@ -1,3 +1,90 @@
-body{
-  min-height: ;
+:root {
+  --gray-85: #1b1b32;
+  --gray-05: #f5f6f7;
+  --gray-75: #3b3b4f;
+  --gray-90: #0a0a23;
+}
+
+body {
+  min-height: 100vh;
+  padding: 50px 20px;
+  font-family: 'Lato', Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  background-color: var(--gray-85);
+  color: var(--gray-05);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  text-align: center;
+  margin: 20px auto;
+  max-width: 350px;
+  font-family: 'Castoro Titling', cursive;
+}
+
+form {
+  color: var(--gray-05);
+  margin: auto 25px;
+  border: 3px solid var(--gray-05);
+  text-align: center;
+  width: 90%;
+  max-width: 500px;
+  background-color: var(--gray-75);
+}
+
+fieldset {
+  border: none;
+  height: 100%;
+  padding: 25px;
+  margin: 10px 20px;
+}
+
+label {
+  display: inline-block;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+input {
+  display: block;
+  font-size: 2.5rem;
+  width: 100%;
+  height: 60px;
+  margin: 10px 0;
+  line-height: 1.4;
+  color: white;
+  background-color: var(--gray-90);
+  border: var(--gray-05);
+}
+
+button {
+  cursor: pointer;
+  margin-top: 15px;
+  text-decoration: none;
+  background-image: linear-gradient(#fecc4c, #ffac33);
+  border: 3px solid #feac32;
+  padding: 10px 16px;
+  font-size: 23px;
+  width: 100%;
+}
+
+.output {
+  color: white;
+  background-color: var(--gray-75);
+  border: 3px solid var(--gray-05);
+  font-size: 2.5rem;
+  width: 80%;
+  max-width: 500px;
+  min-height: 55px;
+  margin-top: 25px;
+  padding: 15px;
+  overflow-wrap: break-word;
+  text-align: center;
 }
